hphp/hack/test/typecheck/async_hint1.php.exp
ERROR: File "async_hint1.php", line 4, characters 30-32:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
